<resources>
    <string name="app_name">Pomodoro</string>
    <string name="default_time_display">00:00:00</string>
    <string name="startButtonText">Start</string>
    <string name="stopButtonText">Stop</string>
    <string name="numberOfInterval">Enter amount of loops</string>
    <string name="workTimerText">Current worktime selected:</string>
    <string name="pauseTimerText">Current pausetime selected:</string>
</resources>