<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <TextView
        android:id="@+id/countDownView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/default_time_display"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/countDownViewPause"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/default_time_display"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.575" />

    <Button
        android:id="@+id/startCountdownButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/startButtonText"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/countDownView"
        />

    <SeekBar
        android:id="@+id/seekBarWork"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:max="300"
        android:min="15"
        app:layout_constraintBottom_toTopOf="@+id/seekBarBreak"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />


    <SeekBar
        android:id="@+id/seekBarBreak"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:max="300"
        android:min="15"
        app:layout_constraintBottom_toTopOf="@+id/startCountdownButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editLoops"
        android:text="@string/numberOfInterval"
        android:textAlignment="center"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:inputType="number"
        app:layout_constraintBottom_toTopOf="@+id/startCountdownButton"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/textView"
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="174dp"
        android:layout_marginEnd="187dp"
        android:text="Work"
        app:layout_constraintBottom_toTopOf="@+id/seekBarWork"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/currentWorktimeText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="50dp"
        android:text="@string/workTimerText"
        app:layout_constraintBottom_toTopOf="@+id/countDownView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/countDownView" />

    <TextView
        android:id="@+id/currentPausetimeText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="105dp"
        android:text="@string/pauseTimerText"
        app:layout_constraintBottom_toTopOf="@+id/seekBarWork"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>